Shorten border line to avoid overlapping with year label
Revert h2/ol border structure, add margin-right to ol so the
border-top line doesn't extend into the year area.

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -25,8 +25,8 @@
 
   h2.bibliography {
     color: var(--global-divider-color);
-    border-top: 1px solid var(--global-divider-color);
-    padding-top: 0.5rem;
+    border: none;
+    padding: 0;
     margin: 1.5rem 0 -1.8rem 0;
     text-align: right;
     line-height: 1.4;
@@ -34,9 +34,10 @@
 
   ol.bibliography {
     list-style: none;
-    border-top: none;
+    border-top: 1px solid var(--global-divider-color);
     padding: 0.8rem 0 0 0;
     margin-top: 0;
+    margin-right: 4rem;
 
     li {
       margin-bottom: 1rem;
